[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
submarine = { version = "0.1.1", features = ["navidrome"] }
strum = {version = "0.27", features = ["derive"]}
anyhow = "1.0.70"
async-trait = "0.1.52"
nom = "8.0.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread"] }
color-eyre = "0.6.5"

mpd = "0.1.0"
config = "0.15.18"
serde = "1.0.228"


mpdrome-subsonic = { path = "crates/mpdrome-subsonic" }
mpdrome-config = { path = "crates/mpdrome-config" }
mpdrome-derive = { path = "crates/mpdrome-derive" }
mpdrome-macro = { path = "crates/mpdrome-macro", features = ["derive"] }
mpdrome-mpd = { path = "crates/mpdrome-mpd"}
mpdrome-bridge = { path = "crates/mpdrome-bridge"}
