[package]
name = "mpdrome-mpd"
version = "0.1.0"
edition = "2024"

[dependencies]
strum.workspace = true
anyhow.workspace = true
async-trait.workspace = true
nom.workspace = true
thiserror.workspace = true

mpdrome-macro.workspace = true
mpdrome-bridge.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
